--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type='text/css' href="css/style.css">
+  <link rel='stylesheet' type='text/css' href='css/style.css'>
   <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700'>
   <title>Braço Mecanico</title>
 </head>
-<body>
-  <h1>Controle Braço Mecânico</h1>
+<body >
+  <h1><img src="img/braco.jpg">Braço Mecânico</h1>
   <div>
   	<img src="img/arrow_down.png" onclick="callArm('down');">
   	<img src="img/arrow_up.png" onclick="callArm('up');">
@@ -17,6 +17,5 @@
   </div>
 </body>
 </html>
-  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-  <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script src="js/jquery-1.11.3.min.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
