New imagens and favicon and changing the div position

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8">
   <link rel='stylesheet' type='text/css' href='css/style.css'>
   <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700'>
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
   <title>Braço Mecanico</title>
 </head>
 <body >
@@ -12,6 +13,8 @@
   	<img src="img/arrow_up.png" onclick="callArm('up');">
   	<img src="img/arrow_left.png" onclick="callArm('left');">
   	<img src="img/arrow_right.png" onclick="callArm('right');">
+    <img src="img/back.png" onclick="callArm('back');">
+    <img src="img/front.png" onclick="callArm('front');">
   	<img src="img/open.jpg" onclick="callArm('open');">
   	<img src="img/close.jpg" onclick="callArm('close');"> 
   </div>
